# dublin-core-metadata-enhancer

./: .gitignore  CHANGELOG.md  CITATION.cff  ICONCLASS_CONFIG.md  README.md  README.template.md  _brand.yml  _quarto.yml  enhance_metadata.py  example.env  example_output_with_iconclass.json  example_usage.py  index.html  index.qmd  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  test_integration.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: python-ci.yml  quarto-publish.yml
documentation/: codelist.md  index.qmd  metadata-enhancement.md
src/: alt_text_generator.py  common.py  iconclass_classifier.py  metadata_enhancer.py
test/: sample_metadata.json  test_alt_text_generator.py  test_common.py  test_iconclass_classifier.py  test_metadata_enhancer.py
