[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dublin-core-metadata-enhancer"
version = "0.1.0"
description = "Enhance Dublin Core records with reproducible enrichment workflows."
authors = [
    { name = "Stadt.Geschichte.Basel", email = "info@stadtgeschichtebasel.ch" }
]
license = { text = "AGPL-3.0" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/maehr/dublin-core-metadata-enhancer"
Repository = "https://github.com/maehr/dublin-core-metadata-enhancer"
Issues = "https://github.com/maehr/dublin-core-metadata-enhancer/issues"

[project.scripts]
enhance-metadata = "enhance_metadata:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["D"]

[tool.hatch.build.targets.wheel]
packages = ["enhance_metadata"]
