[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dublin-core-metadata-enhancer"
version = "0.1.0"
description = "Enhance Dublin Core records with reproducible enrichment workflows."
authors = [
    { name = "Stadt.Geschichte.Basel", email = "info@stadtgeschichtebasel.ch" }
]
license = { text = "AGPL-3.0" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/maehr/dublin-core-metadata-enhancer"
Repository = "https://github.com/maehr/dublin-core-metadata-enhancer"
Issues = "https://github.com/maehr/dublin-core-metadata-enhancer/issues"

[project.scripts]
enhance-metadata = "enhance_metadata:main"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
